[tool.poetry]
name = "hydra-chain-bot"
version = "2.2.6"
description = "The Hydraverse Bot."
authors = [
    "Phillip Sitbon <phillip.sitbon@gmail.com>",
    "Halospace Foundation <contact@halospace.org>",
]
readme = "README.md"
repository = "https://github.com/hydraverse/bot"
homepage = "https://pypi.org/project/hydra-chain-bot/"
documentation = "https://hydraverse.github.io/bot/"

packages = [
    { include = "hybot" },
]

[tool.poetry.scripts]
hybot = "hybot.app:HydraBotApp.main"

[tool.poetry.dependencies]
python = "^3.11"
hydra-chain-py = {git = "https://github.com/hydraverse/hypy"}
pyyaml = "^6.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21"
num2words = "^0.5.12"
aiocache = "^0.12"
#aiogram = {git = "https://github.com/aiogram/aiogram", rev = "cf269e15f4a098b051f97bc68bb2e710d3d61d8a"}  # 3.0.0b8
aiogram = {git = "https://github.com/aiogram/aiogram"}  # 3.0.0rc1
hydra-chain-db = {git = "https://github.com/hydraverse/db"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
